@@ -1,0 +1,3 @@
+#!/bin/bash
+
+python3 /usr/bin/fpc.py $@
